--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,8 @@
-Options -MultiViews
-RewriteEngine On
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^ index.html [QSA,L] 
+<IfModule mod_rewrite.c>
+  RewriteEngine On
+  RewriteBase /Portafolio/
+  RewriteRule ^index\.html$ - [L]
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteRule . /Portafolio/index.html [L]
+</IfModule>
