--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,8 @@
-<IfModule mod_rewrite.c>
-  RewriteEngine On
-  RewriteBase /Portafolio/
-  RewriteRule ^index\.html$ - [L]
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule . /Portafolio/index.html [L]
-</IfModule>
+RewriteEngine On
+RewriteBase /Portafolio/
+
+RewriteCond %{REQUEST_FILENAME} -f [OR]
+RewriteCond %{REQUEST_FILENAME} -d
+RewriteRule ^ - [L]
+
+RewriteRule ^ index.html [L]
